src/app/tools/crash-beautifier/examples/react-native-redbox.txt
TypeError: Cannot read property 'setState' of undefined
    at MyComponent (/src/components/MyComponent.js:42:21)
    at renderWithHooks (/node_modules/react-dom/cjs/react-dom.development.js:14803:18)
    at updateFunctionComponent (/node_modules/react-dom/cjs/react-dom.development.js:17034:20)
    at beginWork (/node_modules/react-dom/cjs/react-dom.development.js:19063:16)
    at HTMLUnknownElement.callCallback (/node_modules/react-dom/cjs/react-dom.development.js:3945:14)
    at Object.invokeGuardedCallbackDev (/node_modules/react-dom/cjs/react-dom.development.js:3994:16)
    at invokeGuardedCallback (/node_modules/react-dom/cjs/react-dom.development.js:4056:31)
    at beginWork$1 (/node_modules/react-dom/cjs/react-dom.development.js:23964:7)
    at performUnitOfWork (/node_modules/react-dom/cjs/react-dom.development.js:22776:12)
    at workLoopSync (/node_modules/react-dom/cjs/react-dom.development.js:22707:5) 